--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6049,5 +6049,12 @@
    <string name="imei_information_title">IMEI information</string>
    <string name="imei_information_summary">IMEI relative information</string>
    <string name="slot_number">(Slot<xliff:g id="slot_num">%1$d</xliff:g>)</string>
+   
+   <!-- Display settings screen, setting options for LCD density -->
+   <string name="lcd_density">LCD density</string>
+   <string name="lcd_density_summary">%d DPI</string>
+   <string name="lcd_density_default">Device default</string>
+   <string name="lcd_density_unsupported">Unsupported</string>
+   <string name="restarting_ui">Restarting</string>
 
 </resources>
